--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>612</width>
-    <height>456</height>
+    <height>466</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -74,7 +74,7 @@
    </property>
    <layout class="QVBoxLayout" name="verticalLayout_2">
     <item>
-     <layout class="QHBoxLayout" name="cityInputLayout">
+     <layout class="QHBoxLayout" name="nameInputLayout">
       <item>
        <widget class="QLineEdit" name="searchbar">
         <property name="font">
@@ -88,7 +88,7 @@
        </widget>
       </item>
       <item>
-       <widget class="QPushButton" name="cityNameSubmitButton">
+       <widget class="QPushButton" name="nameSubmitButton">
         <property name="font">
          <font>
           <pointsize>11</pointsize>
@@ -166,7 +166,7 @@
      </layout>
     </item>
     <item>
-     <widget class="QLabel" name="cityLabel">
+     <widget class="QLabel" name="placeNameLabel">
       <property name="font">
        <font>
         <pointsize>22</pointsize>
@@ -174,6 +174,21 @@
       </property>
       <property name="text">
        <string>New York</string>
+      </property>
+      <property name="alignment">
+       <set>Qt::AlignCenter</set>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <widget class="QLabel" name="fullNameLabel">
+      <property name="font">
+       <font>
+        <pointsize>14</pointsize>
+       </font>
+      </property>
+      <property name="text">
+       <string>New York, United States</string>
       </property>
       <property name="alignment">
        <set>Qt::AlignCenter</set>
